5.1.0/proxy.md
|key|value|important|description|
|---|---|---|---|
|brokerConfigPath|${ROCKETMQ_HOME}/conf/broker.conf|||
|channelExpiredInSeconds|60|||
|channelExpiredTimeout|120000|||
|consumerProcessorThreadPoolNums|4||PROCESSOR_NUMBER|
|consumerProcessorThreadPoolQueueCapacity|10000|||
|contextExpiredInSeconds|30|||
|enableACL|false|||
|enableAclRpcHookForClusterMode|false|||
|enableGrpcEpoll|false|||
|enablePrintJstack|true|||
|enableProxyAutoRenew|true|||
|enableRemotingLocalProxyGrpc|true|||
|enableTopicMessageTypeCheck|true|||
|grpcBossLoopNum|1|||
|grpcClientConsumerLongPollingBatchSize|32|||
|grpcClientConsumerMaxLongPollingTimeoutMillis|20000|||
|grpcClientConsumerMinLongPollingTimeoutMillis|5000|||
|grpcClientIdleTimeMills|120000|||
|grpcClientManagerThreadPoolNums|4||PROCESSOR_NUMBER|
|grpcClientManagerThreadQueueCapacity|10000|||
|grpcClientProducerBackoffInitialMillis|10|||
|grpcClientProducerBackoffMaxMillis|1000|||
|grpcClientProducerBackoffMultiplier|2|||
|grpcClientProducerMaxAttempts|3|||
|grpcConsumerThreadPoolNums|4||PROCESSOR_NUMBER|
|grpcConsumerThreadQueueCapacity|10000|||
|grpcMaxInboundMessageSize|136314880|||
|grpcProducerThreadPoolNums|4||PROCESSOR_NUMBER|
|grpcProducerThreadQueueCapacity|10000|||
|grpcProxyRelayRequestTimeoutInSeconds|5|||
|grpcRouteThreadPoolNums|4||PROCESSOR_NUMBER|
|grpcRouteThreadQueueCapacity|10000|||
|grpcServerPort|8081|||
|grpcThreadPoolNums|24||16 + PROCESSOR_NUMBER * 2|
|grpcThreadPoolQueueCapacity|100000|||
|grpcTransactionThreadPoolNums|4||PROCESSOR_NUMBER|
|grpcTransactionThreadQueueCapacity|10000|||
|grpcWorkerLoopNum|8||PROCESSOR_NUMBER * 2|
|heartbeatSyncerThreadPoolNums|4|||
|heartbeatSyncerThreadPoolQueueCapacity|100|||
|heartbeatSyncerTopicClusterName||||
|heartbeatSyncerTopicName|DefaultHeartBeatSyncerTopic|||
|invisibleTimeMillisWhenClear|1000|||
|localProxyConnectTimeoutMs|3000|||
|localServeAddr||||
|lockTimeoutMsInHandleGroup|3000|||
|longPollingReserveTimeInMillis|100|||
|maxDelayTimeMills|86400000|||
|maxInvisibleTimeMills|43200000|||
|maxMessageGroupSize|64|||
|maxMessageSize|4194304|||
|maxRenewRetryTimes|3|||
|maxTransactionRecoverySecond|3600|||
|maxUserPropertySize|16384|||
|messageDelayLevel|1s 5s 10s 30s 1m 2m 3m 4m 5m 6m 7m 8m 9m 10m 20m 30m 1h 2h|||
|metadataThreadPoolNums|3|||
|metadataThreadPoolQueueCapacity|1000|||
|metricCollectorAddress||||
|metricCollectorMode|off|||
|metricGrpcExporterIntervalInMills|60000|||
|metricGrpcExporterTimeOutInMills|3000|||
|metricsExporterType|DISABLE|||
|metricsGrpcExporterHeader||||
|metricsGrpcExporterTarget||||
|metricsInDelta|false|||
|metricsLabel||||
|metricsPromExporterHost||||
|metricsPromExporterPort|5557|||
|minInvisibleTimeMillsForRecv|10000|||
|namesrvAddr||||
|namesrvDomain||||
|namesrvDomainSubgroup||||
|printJstackInMillis|60000|||
|printThreadPoolStatusInMillis|3000|||
|producerProcessorThreadPoolNums|4||PROCESSOR_NUMBER|
|producerProcessorThreadPoolQueueCapacity|10000|||
|proxyClusterName|DefaultCluster|||
|proxyMode|CLUSTER|||
|proxyName||||
|regionId||||
|remotingAccessAddr||||
|remotingDefaultThreadPoolNums|16||4 * PROCESSOR_NUMBER|
|remotingDefaultThreadPoolQueueCapacity|50000|||
|remotingHeartbeatThreadPoolNums|8||2 * PROCESSOR_NUMBER|
|remotingHeartbeatThreadPoolQueueCapacity|50000|||
|remotingListenPort|8080|||
|remotingPullMessageThreadPoolNums|16||4 * PROCESSOR_NUMBER|
|remotingPullThreadPoolQueueCapacity|50000|||
|remotingSendMessageThreadPoolNums|16||4 * PROCESSOR_NUMBER|
|remotingSendThreadPoolQueueCapacity|10000|||
|remotingTopicRouteThreadPoolNums|8||2 * PROCESSOR_NUMBER|
|remotingTopicRouteThreadPoolQueueCapacity|50000|||
|remotingUpdateOffsetThreadPoolNums|16||4 * PROCESSOR_NUMBER|
|remotingUpdateOffsetThreadPoolQueueCapacity|10000|||
|remotingWaitTimeMillsInDefaultQueue|3000|||
|remotingWaitTimeMillsInHeartbeatQueue|31000|||
|remotingWaitTimeMillsInPullQueue|5000|||
|remotingWaitTimeMillsInSendQueue|3000|||
|remotingWaitTimeMillsInTopicRouteQueue|3000|||
|remotingWaitTimeMillsInUpdateOffsetQueue|3000|||
|renewAheadTimeMillis|10000|||
|renewMaxThreadPoolNums|4|||
|renewMaxTimeMillis|10800000|||
|renewSchedulePeriodMillis|5000|||
|renewSliceTimeMillis|60000|||
|renewThreadPoolNums|2|||
|renewThreadPoolQueueCapacity|300|||
|rocketMQClusterName|DefaultCluster|||
|rocketmqMQClientNum|6|||
|subscriptionGroupConfigCacheExpiredInSeconds|20|||
|subscriptionGroupConfigCacheMaxNum|20000|||
|tlsCertPath|${ROCKETMQ_HOME}/conf/tls/rocketmq.crt|||
|tlsKeyPath|${ROCKETMQ_HOME}/conf/tls/rocketmq.key|||
|tlsTestModeEnable|true|||
|topicConfigCacheExpiredInSeconds|20|||
|topicConfigCacheMaxNum|20000|||
|topicRouteServiceCacheExpiredInSeconds|20|||
|topicRouteServiceCacheMaxNum|20000|||
|topicRouteServiceThreadPoolNums|4||PROCESSOR_NUMBER|
|topicRouteServiceThreadPoolQueueCapacity|5000|||
|traceOn|false|||
|transactionDataExpireMillis|30000|||
|transactionDataExpireScanPeriodMillis|10000|||
|transactionDataMaxNum|15|||
|transactionDataMaxWaitClearMillis|30000|||
|transactionHeartbeatBatchNum|100|||
|transactionHeartbeatPeriodSecond|20|||
|transactionHeartbeatThreadPoolNums|20|||
|transactionHeartbeatThreadPoolQueueCapacity|200|||
|useDelayLevel|true|||
|userPropertyMaxNum|128|||
